--- a/courses/ml1/lesson1-rf.ipynb
+++ b/courses/ml1/lesson1-rf.ipynb
@@ -216,9 +216,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "hidden": true
    },
@@ -237,11 +236,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data%20Dictionary.xlsx\t\t  Test.csv\t     Train.csv\r\n",
-      "Machine_Appendix.csv\t\t  tmp\t\t     Valid.csv\r\n",
-      "median_benchmark.csv\t\t  TrainAndValid.7z   ValidSolution.csv\r\n",
-      "models\t\t\t\t  TrainAndValid.csv\r\n",
-      "random_forest_benchmark_test.csv  TrainAndValid.zip\r\n"
+      "Train.csv\r\n"
      ]
     }
    ],
@@ -3745,7 +3740,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   },
   "toc": {
    "colors": {
